[package]
name = "bip300301_enforcer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost = "0.13.2"
prost-build = "0.13.3"
protox = "0.7.1"
tonic-build = "0.12.3"

[dependencies]
async-broadcast = "0.7.1"
bincode = "1.3.3"
bip300301_messages = { git = "https://github.com/LayerTwo-Labs/bip300301_messages" }
byteorder = "1.5.0"
clap = { version = "4.5.18", features = ["derive"] }
either = "1.13.0"
fallible-iterator = "0.3.0"
futures = "0.3.30"
hashlink = { version = "0.9.1", features = ["serde_impl"] }
heed = "0.20.5"
hex = "0.4.3"
miette = { version = "7.1.0", features = ["fancy"] }
num-traits = "0.2.19"
nom = "7.1.3"
prost = "0.13.2"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.64"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tonic = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq-jsonrpc = { git = "https://github.com/nchashch/ureq-jsonrpc" }
zeromq = "0.4.0"

[dependencies.educe]
version = "0.6.0"
default-features = false
features = ["Clone", "Debug"]

[lints.clippy]
all = { level = "deny", priority = -1 }
assertions_on_result_states = "allow"
let_unit_value = "allow"
wildcard_imports = "deny"

[lints.rust]
let_underscore_drop = "deny"
